# Project2-robotics

./: CMakeLists.txt  README.md  package.xml
config/: config.yaml  joint_names_planar3dof.yaml
launch/: control.launch  display.launch  gazebo.launch  rviz.launch  spawn.launch
manipulator/config/: config.yaml
manipulator/launch/: control.launch  rviz.launch  spawn.launch
manipulator/meshes/: base_link.STL  link1.STL  link2.STL  link3.STL
manipulator/src/: pub3l.py
manipulator/urdf/: manipulator.csv  manipulator.gazebo  manipulator.urdf  manipulator.xacro
meshes/: base_link.STL  link1.STL  link2.STL  link3.STL
src/: pub.py  pub3l.py  setpoint.py
urdf/: brazo.csv  brazo.gazebo  brazo.urdf  brazo.xacro  planar3dof.csv  planar3dof.gazebo  planar3dof.urdf  planar3dof.xacro
